--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 input{
@@ -14,6 +15,7 @@ input{
     border:1px solidrgb(8, 175, 128);
     
 }
+
 button{
     background-color: rgb(8, 175, 128);
     color: white;
@@ -26,6 +28,11 @@ button{
     border-radius: 2px;
     margin-top: 10px;
 
+}
+#delete-btn {
+    background: white;
+    color: rgb(8, 175, 128) ;
+    border-color: rgb(8, 175, 128)  ;
 }
 ul{
     margin-top: 20px;
